Adjust title spacing, color description box on create page, and fix project service

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -221,7 +221,7 @@ input.form-control {
 }
 
 .title {
-    margin-top: -10px;
+    margin-top: -6px;
     margin-bottom: -20px;
     font-size: 69px; //nice
 }
